# mcp2200ctl

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
.azure-pipelines/: ubuntu-latest.yml
cmake/: FindHidapi.cmake  version.cpp
src/: command.cpp  command.h  configure_command.cpp  configure_command.h  describe_command.cpp  describe_command.h  format.cpp  format.h  get_command.cpp  get_command.h  get_eeprom_command.cpp  get_eeprom_command.h  helpers.cpp  helpers.h  list_command.cpp  list_command.h  main.cpp  mcp2200.cpp  mcp2200.h  mcp2200ctl.cpp  mcp2200ctl.h  set_command.cpp  set_command.h  set_eeprom_command.cpp  set_eeprom_command.h  target.cpp  target.h  vendor_product.cpp  vendor_product.h  version.cpp.in  version.h
src/console/: mcp2200ctl.cpp  mcp2200ctl.h
src/gui/: enum.h  main.cpp  mapping.h  mcp2200gui.cpp  mcp2200gui.h  paths.cpp  paths.h  types.cpp  types.h
src/gui/udev/: udev.cpp  udev.h
src/test/: gpio_mask.cpp
